MainActivity and Fragments

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="brown">#C47A4E</color>
+    <color name="gray">#BDBDBD</color>
+    <color name="ripple_color">#1FC47A4E</color>
+
 </resources>
