--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/nav_map"
+        android:icon="@drawable/ic_map"
+        android:enabled="true"
+        android:title="@string/Map" />
+
+    <item
         android:id="@+id/nav_offers"
         android:icon="@drawable/ic_offer"
         android:enabled="true"
@@ -24,4 +30,5 @@
         android:icon="@drawable/ic_account"
         android:enabled="true"
         android:title="@string/Account" />
+
 </menu>
