--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,14 +4,19 @@
         <item name="backgroundTint">@color/dark_gray</item>
         <!-- Primary brand color -->
         <item name="colorPrimary">@color/black</item>
-        <item name="colorPrimaryContainer">@color/dark_gray</item>
-        <item name="colorPrimaryVariant">@color/dark_gray</item>
         <item name="colorOnPrimary">@color/dark_gray</item>
+        <item name="colorOnPrimaryContainer">@color/dark_gray</item>
 
+        <item name="colorSurface">@color/dark_gray</item>
+        <item name="colorOnSurface">@color/white</item>
+        <item name="colorSurfaceContainerHighest">@color/ripple_color</item>
+
+
+        <item name="colorSurfaceVariant">@color/ripple_color_lighter</item>
+        <item name="colorOnSurfaceVariant">@color/white</item>
         <!-- Secondary brand color -->
         <item name="colorSecondary">@color/dark_gray</item>
         <item name="colorSecondaryContainer">@color/white</item>
-        <item name="colorSecondaryVariant">@color/dark_gray</item>
         <item name="colorOnSecondary">@color/black</item>
 
         <!-- Status bar color -->
@@ -22,16 +27,21 @@
         <item name="itemTextColor">@color/nav_item_color_dark</item>
         <!--Fragment's background color-->
         <item name="android:windowBackground">@color/dark_gray</item>
-
         <item name="android:navigationBarColor">@color/dark_gray</item>
+
+        <item name="switchStyle">@style/Widget.Coffee.Switch.Dark</item>
     </style>
 
     <style name="Widget.App.BottomNavigationView" parent="Widget.Material3.BottomNavigationView">
-        <item name="materialThemeOverlay">@style/ThemeOverlay.App.BottomNavigationView</item>
+        <item name="colorSurface">?attr/colorSurface</item>
+        <item name="colorOnSurfaceVariant">@color/ripple_color</item>
     </style>
 
-    <style name="ThemeOverlay.App.BottomNavigationView" parent="">
-        <item name="colorOnSurfaceVariant">@color/nav_item_color_dark</item>
+    <style name="Widget.Coffee.Switch.Dark" parent="Widget.Material3.CompoundButton.Switch">
+        <item name="thumbTint">@color/switch_thumb_selector_dark</item>
+        <item name="trackTint">@color/switch_track_selector_dark</item>
     </style>
+
+
 
 </resources>
