--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -5,5 +5,7 @@
         <item name="android:navigationBarColor">?attr/isLightTheme</item>
         <item name="android:statusBarColor">?attr/isLightTheme</item>
         <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
+        <item name="trackTint">?attr/isLightTheme</item>
+        <item name="thumbTint">?attr/isLightTheme</item>
     </style>
 </resources>
