--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,14 +1,21 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.CoffeeHouse" parent="Theme.Material3.DayNight.NoActionBar">
-<!--        <item name="colorPrimary">@color/white</item>-->
-<!--        <item name="colorPrimaryVariant">@color/white</item>-->
-<!--        <item name="colorOnPrimary">@color/white</item>-->
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/brown</item>
+        <item name="colorOnPrimaryContainer">@color/brown</item>
+
+        <item name="colorSurface">@color/white</item>
+        <item name="colorOnSurface">@color/dark_gray</item>
+        <item name="colorSurfaceContainerHighest">@color/ripple_color_lighter</item>
+
+        <item name="colorSurfaceVariant">@color/ripple_color</item>
+        <item name="colorOnSurfaceVariant">@color/black</item>
+
         <!-- Secondary brand color. -->
-<!--        <item name="colorSecondary">@color/white</item>-->
+        <item name="colorSecondary">@color/brown</item>
         <item name="colorSecondaryContainer">@color/ripple_color</item>
-<!--        <item name="colorSecondaryVariant">@color/white</item>-->
-<!--        <item name="colorOnSecondary">@color/black</item>-->
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
@@ -17,13 +24,18 @@
         <item name="itemTextColor">@color/nav_item_color</item>
         <!--Fragment's background color-->
         <item name="android:windowBackground">@color/white</item>
+        <item name="switchStyle">@style/Widget.Coffee.Switch</item>
     </style>
 
     <style name="Widget.App.BottomNavigationView" parent="Widget.Material3.BottomNavigationView">
-        <item name="materialThemeOverlay">@style/ThemeOverlay.App.BottomNavigationView</item>
-    </style>
-    <style name="ThemeOverlay.App.BottomNavigationView" parent="">
-        <item name="colorSurface">@color/ripple_color</item>
+        <item name="colorSurface">?attr/colorSurface</item>
         <item name="colorOnSurfaceVariant">@color/ripple_color</item>
     </style>
+
+    <style name="Widget.Coffee.Switch" parent="Widget.Material3.CompoundButton.Switch">
+        <item name="thumbTint">@color/switch_thumb_selector</item>
+        <item name="trackTint">@color/switch_track_selector</item>
+    </style>
+
+
 </resources>
