--- a/app/src/main/res/layout/cart_item_card.xml
+++ b/app/src/main/res/layout/cart_item_card.xml
@@ -60,25 +60,17 @@
                 android:paddingTop="2dp"/>
 
             <ImageButton
-                android:id="@+id/addToCart"
+                android:id="@+id/removeFromCart"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginEnd="10dp"
                 android:padding="10dp"
-                android:src="@drawable/ic_cart"
+                android:src="@drawable/ic_bin"
                 android:scaleType="centerInside"
                 android:layout_gravity="end"
                 android:background="@drawable/circle_background"
-                android:contentDescription="@string/addToCartDesc"
+                android:contentDescription="@string/removeFromCartDesc"
                 card_view:tint="@color/white" />
-
-<!--            <Button-->
-<!--                android:id="@+id/addToCart"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="@string/addToCartString"-->
-<!--                android:layout_gravity="end"-->
-<!--                />-->
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
