--- a/app/src/main/res/layout/cart_item_card.xml
+++ b/app/src/main/res/layout/cart_item_card.xml
@@ -16,9 +16,9 @@
         <ImageView
             android:id="@+id/imageDrink"
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:contentDescription="Drink Image"/>
+            android:contentDescription="@string/imageDescription"/>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -27,13 +27,22 @@
             android:orientation="vertical"
             android:paddingStart="8dp">
 
-            <TextView
-                android:id="@+id/textName"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_marginEnd="10dp"
-                android:textSize="18sp"/>
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/textName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="10dp"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:id="@+id/textQuantity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"/>
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/textPrice"
@@ -59,6 +68,7 @@
                 android:layout_marginEnd="10dp"
                 android:paddingTop="2dp"/>
 
+
             <ImageButton
                 android:id="@+id/removeFromCart"
                 android:layout_width="40dp"
@@ -71,6 +81,10 @@
                 android:background="@drawable/circle_background"
                 android:contentDescription="@string/removeFromCartDesc"
                 card_view:tint="@color/white" />
+
+
+
+
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
