--- a/app/src/main/res/layout/menu_item_card.xml
+++ b/app/src/main/res/layout/menu_item_card.xml
@@ -16,9 +16,9 @@
         <ImageView
             android:id="@+id/imageDrink"
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:contentDescription="Drink Image"/>
+            android:contentDescription="@string/imageDescription"/>
 
         <LinearLayout
             android:layout_width="0dp"
