--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -7,5 +7,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewCart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/makeAnOrder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/makeAnOrder"
+        style="@style/Widget.CoffeeHouse.MaterialButton"
+        android:layout_margin="10dp"/>
 </LinearLayout>
