--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.CoffeeHouse" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/white</item>
-        <item name="colorOnPrimary">@color/brown</item>
+        <item name="colorOnPrimary">@color/black</item>
         <item name="colorOnPrimaryContainer">@color/brown</item>
 
         <item name="colorSurface">@color/white</item>
@@ -37,9 +37,39 @@
         <item name="colorOnSurfaceVariant">@color/ripple_color</item>
     </style>
 
+    <style name="Widget.CoffeeHouse.MaterialButton" parent="Widget.Material3.Button">
+        <item name="backgroundTint">@color/brown</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Widget.Coffee.IconButton" parent="@android:style/Widget.ImageButton">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:scaleType">centerInside</item>
+
+        <item name="android:background">@drawable/circle_background</item>
+        <item name="android:tint">@color/white</item>
+    </style>
+
+    <style name="CoffeeAlertDialog" parent="ThemeOverlay.Material3.MaterialAlertDialog">
+        <item name="colorPrimary">@color/black</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="buttonBarPositiveButtonStyle">@style/CoffeeAlertDialogButton</item>
+    </style>
+    <style name="CoffeeAlertDialogButton" parent="Widget.Material3.Button">
+        <!-- Цвет фона кнопки -->
+        <item name="backgroundTint">@color/brown</item>
+        <!-- Цвет текста кнопки -->
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <style name="Widget.Coffee.Switch" parent="Widget.Material3.CompoundButton.Switch">
         <item name="thumbTint">@color/switch_thumb_selector</item>
         <item name="trackTint">@color/switch_track_selector</item>
     </style>
+
+    <style name="Theme.CoffeeHouse" parent="Base.Theme.CoffeeHouse" />
 
 </resources>
