--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -14,9 +14,10 @@
         android:gravity="start|center_vertical"
         android:paddingBottom="16dp">
         <TextView
+            android:id="@+id/loginViewed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/User_name"
+            android:text="@string/userLogin"
             android:textSize="20sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -119,7 +120,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
-
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/toSignUpButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/Widget.CoffeeHouse.MaterialButton"
+            android:text="Sign Up"/>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/toSignInButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/Widget.CoffeeHouse.MaterialButton"
+            android:text="Sign In"/>
 
     </LinearLayout>
 
